force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/Robot_Hegeo_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Configuración relacionada con el robot Hegeo y el trigger de ContentDocumentLink</description>
    <label>Robot Hegeo Setting</label>
    <pluralLabel>Robot Hegeo Settings</pluralLabel>
</CustomObject>