force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/BCCAddressIndex__c.field-meta.xml
<CustomField>
    <fullName>BCCAddressIndex__c</fullName>
    <label>BCC Address Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>