force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/CaseFields__c.field-meta.xml
<CustomField>
    <fullName>CaseFields__c</fullName>
    <description>Campos de la entidad caso contra los que hacer el mapeo desde CSV</description>
    <label>Case Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>