force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/CaseFieldsIndex__c.field-meta.xml
<CustomField>
    <fullName>CaseFieldsIndex__c</fullName>
    <description>Índice de la línea del CSV en la que se encuentran los campos del caso</description>
    <label>Case Fields Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>