force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/CaseRecordTypeNames__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordTypeNames__c</fullName>
    <description>Tipos de registro de los casos que tipifica el robot Hegeo</description>
    <label>Case Record Type Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>