force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/CaseTypeFieldsMetadata__c.field-meta.xml
<CustomField>
    <fullName>CaseTypeFieldsMetadata__c</fullName>
    <description>Campos correspondientes al metadato de mapeo para la tipificación de los casos</description>
    <label>Case Type Fields Metadata</label>
    <type>TextArea</type>
</CustomField>