force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/CCAddressIndex__c.field-meta.xml
<CustomField>
    <fullName>CCAddressIndex__c</fullName>
    <label>CC Address Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>