force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/DocumentTitle__c.field-meta.xml
<CustomField>
    <fullName>DocumentTitle__c</fullName>
    <description>Nombre del fichero concreto que se debe procesar.</description>
    <label>Document Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>