force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/FileExtension__c.field-meta.xml
<CustomField>
    <fullName>FileExtension__c</fullName>
    <label>File Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>