force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/FromAddressIndex__c.field-meta.xml
<CustomField>
    <fullName>FromAddressIndex__c</fullName>
    <description>Índice de la línea del CSV en la que se encuentra fromAddress</description>
    <label>From Address Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>