force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el automatismo debe procesar el fichero</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>