force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/RoutingAddresses__c.field-meta.xml
<CustomField>
    <fullName>RoutingAddresses__c</fullName>
    <description>Buzones de correo configurados en Email-to-case que se corresponde con está configuración</description>
    <label>E2C Routing Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>