force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/Separator__c.field-meta.xml
<CustomField>
    <fullName>Separator__c</fullName>
    <description>Separador por el que dividir el contenido recibido en el CSV</description>
    <label>Separator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>