force-app/zurich-base/main/default/objects/Robot_Hegeo_Setting__mdt/fields/ToAddressIndex__c.field-meta.xml
<CustomField>
    <fullName>ToAddressIndex__c</fullName>
    <description>Índice de la línea del CSV en la que se encuentra toAddress</description>
    <label>To Address Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>